Fixed the sticky footer for every page! Project is 90% done. Still need to fix: nav, portfolio pictures, and aligning header with sections.

--- a/assets/style.css
+++ b/assets/style.css
@@ -107,7 +107,10 @@ footer {
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
     height: 50px;
-    clear: both;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 
